[package]
name = "joycaption-candle"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1"
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
image = "0.25"                       # bump to avoid old deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.15"
hf-hub = "0.3"
num-traits = "0.2.19"

# Candle crates, all aligned
candle-core = { version = "0.9", default-features = false, features = ["cuda"] }
candle-nn   = { version = "0.9", default-features = false, features = ["cuda"] }
candle-transformers = { version = "0.9", default-features = false, features = ["cuda"] }

[features]
cpu = [
  "candle-core/cpu",
  "candle-nn/cpu",
  "candle-transformers/cpu"
]
